--- a/pokemon-api/index.html
+++ b/pokemon-api/index.html
@@ -51,7 +51,7 @@
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
-    ></script>>
+    ></script>
     <script src="pokemon.js"></script>
   </body>
 </html>
